--- a/voice-ai-assistant/package.json
+++ b/voice-ai-assistant/package.json
@@ -3,7 +3,7 @@
   "productName": "voice-ai-assistant",
   "version": "1.0.0",
   "description": "My Electron application description",
-  "main": "main.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
@@ -18,12 +18,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@deepgram/sdk": "^4.2.0",
-    "@picovoice/porcupine-node": "^3.0.6",
-    "electron-squirrel-startup": "^1.0.1",
-    "mic": "^2.1.2",
-    "node-record-lpcm16": "^1.0.1",
-    "open": "^10.1.2"
+    "electron-squirrel-startup": "^1.0.1"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.8.1",
@@ -34,6 +29,6 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.8.1",
     "@electron-forge/plugin-fuses": "^7.8.1",
     "@electron/fuses": "^1.8.0",
-    "electron": "^36.3.1"
+    "electron": "36.3.1"
   }
 }
